packages/next-swc/crates/core/tests/errors/next-font-loaders/font-modules/too-many-args/output.js
import inter from '@next/font/google?{"font":"Inter"}'
fn({}, 10)
